<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.casper.lifeprice.GoodListFragment">

    <ListView
        android:id="@+id/list_view_goods"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</FrameLayout>
