<resources>
    <string name="app_name">time1</string>
    <string name="Botton_new">NEW</string>
    <string name="text_biaoti">标题</string>
    <string name="text_riqi">日期</string>
    <string name="text_chongfu">重复</string>
    <string name="text_tupian">图片</string>
    <string name="text_zhiding">置顶</string>
    <string name="text_beizhu">备注</string>
    <string name="text_qenren">确认</string>
    <string name="title_activity_leftmenu_new_main">LeftmenuNewMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="text_wechat">点击微信登陆</string>
    <string name="text_xiaobujian">小部件</string>
    <string name="text_zhutise">主题色</string>
    <string name="text_gaojiban">高级版</string>
    <string name="text_yingyongsuo">应用锁</string>
    <string name="text_shezhi">设置</string>
    <string name="text_guanyu">关于</string>
    <string name="text_shike">时刻</string>
    <string name="text_banzhuyufankui">帮助与反馈</string>
    <string name="text_tongzhilan">通知栏</string>
    <string name="text_zairilizhongxianzhi">在日历中显示</string>
    <string name="text_kuaijietubie">快捷图标</string>
    <string name="text_shanchu">删除</string>
    <string name="text_xiugai">修改</string>
    <string name="text_welcome">欢迎使用iTime</string>
    <string name="text_gettime">请点击获取时间</string>
</resources>
